--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
   </section>
 </body>
 <footer>
-    <p id="footer1">© 2025 Sanskar Madake. All rights reserved.</p>
-    <p id="footer2">Designed & Developed by " SM " With ❤️ </p>
+    <p id="footer1" id="footer2">© 2025 Sanskar Madake. All rights reserved. Designed & Developed by " SM " With ❤️ </p>
+    
 </footer>
     
 
@@ -449,3 +449,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
